# code-inbox-server

./: .env.example  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  app.json  deta.json  docker-compose.yml  heroku.Dockerfile  main.py  pyproject.toml  requirements.txt  run.sh  server.Dockerfile  tox.ini
.github/workflows/: codeql.yml  fastapi.yml
src/: __init__.py  config.py  main.py
src/nylas/: __init__.py  crud.py  models.py  router.py  schemas.py
src/users/: __init__.py  crud.py  models.py  router.py  schemas.py
src/utils/: __init__.py  dependencies.py  engine.py  openai_api.py
static/: welcome_email.html
