[tool.poetry]
name = "code-inbox-server"
version = "0.1.0"
description = "A fully async based backend for Code Inbox built using FastAPI, MongoDB, Pydantic, ODMantic and Deta."
authors = ["wiseaidev <business@wiseai.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wiseaidev/code-inbox-server"
homepage = "https://github.com/wiseaidev/code-inbox-server"
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = ["python", "fastapi", "MongoDB", "ODMantic", "Deta", "Code Inbox"]
packages = [
    { include = "src" },
    { include = "LICENSE" },
    { include = "README.md" },
]

[tool.poetry.dependencies]
python = "^3.10.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^1.10.12"}
python-multipart = "^0.0.5"
odmantic = "^0.9.2"
dnspython = "^2.2.1"
deta = "^1.1.0"
nylas = "^5.14.1"
openai = "^0.28.1"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "src:serve"

[tool.black]
line-length = 79
