[tool.poetry]
name = "src"
version = "0.1.0"
description = "A fully async based backend for Code Inbox built using FastAPI, MongoDB, Pydantic, ODMantic and Deta."
authors = ["wiseaidev <business@wiseai.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wiseaidev/code-inbox-server"
homepage = "https://github.com/wiseaidev/code-inbox-server"
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = ["python", "fastapi", "MongoDB", "ODMantic", "Deta", "Code Inbox"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^1.10.12"}
python-multipart = "^0.0.5"
odmantic = "^0.9.2"
dnspython = "^2.4.2"
deta = "^1.1.0"
nylas = "^5.14.1"
openai = "^0.28.1"
apscheduler = "^3.10.4"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
tox = "^4.11.3"
isort = "^5.12.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
httpx = "^0.25.0"
pylint = "^2.17.6"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "src:serve"

[tool.black]
line-length = 79
